CMAKE_MINIMUM_REQUIRED(VERSION 2.8.9)

ADD_EXECUTABLE(cbc-recv recv.c)
TARGET_LINK_LIBRARIES(cbc-recv dcp ${LIBEVENT_LIBRARIES})
INSTALL(TARGETS cbc-recv
        RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})

ADD_EXECUTABLE(cbc-send send.c)
TARGET_LINK_LIBRARIES(cbc-send dcp ${LIBEVENT_LIBRARIES})
INSTALL(TARGETS cbc-send
        RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
