INCLUDE(../cmake/Modules/FindLibgit2.cmake)

INCLUDE_DIRECTORIES(AFTER ${LIBEVENT_INCLUDE_DIR})
INCLUDE_DIRECTORIES(AFTER ${LIBGIT2_INCLUDE_DIR})

ADD_EXECUTABLE(cbc-recv recv.c)
TARGET_LINK_LIBRARIES(cbc-recv dcp ${LIBEVENT_LIBRARIES} ${LIBGIT2} ${LIBPROFILER})
INSTALL(TARGETS cbc-recv
        RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})

ADD_EXECUTABLE(cbc-send send.c)
TARGET_LINK_LIBRARIES(cbc-send dcp ${LIBEVENT_LIBRARIES} ${LIBGIT2} ${LIBPROFILER})
INSTALL(TARGETS cbc-send
        RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
